# cxx-statemachine

./: .gitmodules  CMakeLists.txt  README
include/: statemachine.h
src/: test_minimal.cpp  test_sizeof.cpp
